[package]
name = "embassy-vsf"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "VSF Hardware Abstraction Layer"
keywords = ["embedded", "async", "hal", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std", "asynchronous"]
repository = "https://github.com/vsfteam/vsf"

[dependencies]
embassy-embedded-hal = "0.5"
embassy-futures = { version = "0.1", git = "https://github.com/embassy-rs/embassy" }

embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io = { version = "0.7" }
embedded-io-async = { version = "0.7" }
embedded-hal-async = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
embedded-can = "0.4"

critical-section = "1.1"
paste = "1.0"

vsf-hal-macros = { path = "./vsf-hal-macros" }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embassy-executor = { version = "0.9", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-hal-internal = { version = "0.3", git = "https://github.com/embassy-rs/embassy", features = ["cortex-m", "prio-bits-4"] }

embassy-sync = { version = "0.7", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-time = { version = "0.5", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

defmt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
defmt-rtt = { version = "1.0" }

[target.'cfg(all(target_arch = "riscv32", target_os = "none"))'.dependencies]
embassy-executor = { version = "0.9", git = "https://github.com/embassy-rs/embassy", features = ["arch-riscv32", "executor-thread", "defmt"] }
embassy-hal-internal = { version = "0.3", git = "https://github.com/embassy-rs/embassy", features = [] }

embassy-sync = { version = "0.7", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-time = { version = "0.5", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

defmt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

riscv-rt = { version = "0.13" }
defmt-rtt = { version = "1.0" }

[target.'cfg(target_os = "windows")'.dependencies]
embassy-hal-internal = { version = "0.3", git = "https://github.com/embassy-rs/embassy", features = [] }

embassy-sync = { version = "0.7", git = "https://github.com/embassy-rs/embassy", features = ["log"] }
embassy-time = { version = "0.5", git = "https://github.com/embassy-rs/embassy", features = ["log", "tick-hz-32_768"] }
embassy-usb = { version = "0.5", git = "https://github.com/embassy-rs/embassy", features = ["log"] }

log = "0.4"

[features]
defmt = []
log = []
rt = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[build-dependencies]
bindgen = "0.72"
toml = "0.9"
shellexpand = "3.1"
lazy_static = "1.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
