[package]
name = "embassy-vsf"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "VSF Hardware Abstraction Layer"
keywords = ["embedded", "async", "hal", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std", "asynchronous"]
repository = "https://github.com/vsfteam/vsf"

[dependencies]
embassy-sync = { version = "0.7.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-futures = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy" }
embassy-hal-internal = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["cortex-m", "prio-bits-4"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"

embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
embedded-can = "0.4"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

vsf-hal-macros = { path = "./vsf-hal-macros" }

[features]
defmt = []
log = []

[build-dependencies]
bindgen = "0.72.1"
toml = "0.9.6"
shellexpand = "1.0"

[vsf]
path = "${VSF_PATH}"

[vsf.target]
vendor = "Nations"
model = "N32H765IIB7EC"
flags = [
    "--target=thumbv7m-none-eabihf",
    "-I${VSF_PATH}/source/utilities/compiler/arm/3rd-party/CMSIS/CMSIS/Core/Include",
    "-D__OOC_CPP__"
]
