[package]
name = "embassy-n32h7"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "embassy support for N32H7 series"
keywords = ["embedded", "async", "hal", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std", "asynchronous"]
repository = "https://github.com/vsfteam/vsf"

[dependencies]
embassy-vsf = { path = "../embassy-vsf", features = ["defmt"] }

panic-probe = { version = "1.0", features = ["print-defmt"] }
defmt = "1.0"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embassy-executor = { version = "0.9", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
defmt-rtt = "1.0"

[target.'cfg(all(target_arch = "riscv32", target_os = "none"))'.dependencies]
embassy-executor = { version = "0.9", git = "https://github.com/embassy-rs/embassy", features = ["arch-riscv32", "executor-thread", "defmt"] }
defmt-rtt = "1.0"

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
embassy-executor = { version = "0.9", git = "https://github.com/embassy-rs/embassy", features = ["arch-std", "executor-thread", "defmt"] }

[features]
defmt = []
log = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
